# bazel-go-project

./: BUILD.bazel  MODULE.bazel  bazel-bazel-go-project  bazel-bin  bazel-out  bazel-testlogs  go.mod  graph.in
Bazel-go-project/: Answer.bru  Leaderboard.bru  bruno.json
cmd/: BUILD.bazel
cmd/server/: BUILD.bazel  main.go
internal/: BUILD.bazel
internal/api/: BUILD.bazel  handlers.go  routes.go
internal/models/: BUILD.bazel  leaderboard.go  question.go
internal/repository/: BUILD.bazel  leaderboard.go  mongodb.go  question.go
internal/service/: BUILD.bazel  leaderboard.go  questions.go
questions/: random.http
questions/id/: answer.http
