###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module (
    name = "com_github_jojojorik_bazel-go-project",
    version = "0.1.0",
)

bazel_dep (
    name = "rules_go",
    version = "0.50.1",
)

bazel_dep (
    name = "gazelle",
    version = "0.37.0",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps,  
         "com_github_gorilla_mux",
         "org_mongodb_go_mongo_driver",
)